<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.handa.fragments.CreateSecond">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/list_border"
            android:layout_weight="10">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:text="Select the Category"
                android:textColor="@color/purple_200"
                android:textSize="30dp">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/second_rb1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diet" />

                <RadioButton
                    android:id="@+id/second_rb2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/study" />

                <RadioButton
                    android:id="@+id/second_rb3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lifestyle" />

                <RadioButton
                    android:id="@+id/second_rb4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hobby" />

                <RadioButton
                    android:id="@+id/second_rb5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language" />

                <RadioButton
                    android:id="@+id/second_rb6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/money" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>