<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.handa.fragments.CreateThird">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:text="Title"

                android:textColor="@color/purple_200"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/ex_wake_up_6_00am"
                android:inputType="textPersonName"
                android:orientation="horizontal"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"

                android:layout_marginEnd="4dp"
                android:background="@drawable/border"
                android:text="Authentication Method"
                android:textColor="@color/purple_200"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/auth_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:hint="@string/certify_date_water_cup_and_vitamin_using_photo"
                android:inputType="textPersonName"
                android:orientation="horizontal"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="216dp"
                android:layout_marginEnd="4dp"

                android:background="@drawable/border"
                android:text="Description"
                android:textColor="@color/purple_200"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/desc_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="276dp"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:hint="Explain your challenge"
                android:inputType="textPersonName"
                android:orientation="horizontal"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_3"
                android:layout_width="192dp"
                android:layout_height="176dp"
                android:layout_marginTop="436dp"
                android:background="@drawable/border"

                android:src="@drawable/practice2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.173"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/uploadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="492dp"
                android:layout_marginEnd="44dp"
                android:text="Upload"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="655dp"
                android:text="Create Challenge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/RePhoto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/border"
                android:text="@string/upload_challenge_representative_photograph"
                android:textColor="@color/purple_200"
                android:textSize="23dp"
                app:layout_constraintBottom_toTopOf="@+id/img_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>